// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch snapshots > matches snapshot: Checked 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <span
      aria-checked="true"
      aria-labelledby="airplane-mode-checked-label"
      class="inline-flex h-5 w-9 shrink-0 items-center rounded-full border border-transparent bg-input outline-none transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[checked]:bg-primary"
      data-checked=""
      id="base-ui-_r_3_"
      role="switch"
      tabindex="0"
    >
      <span
        class="block size-4 translate-x-0.5 rounded-full bg-background shadow-sm transition-transform data-[checked]:translate-x-4"
        data-checked=""
      />
    </span>
    <input
      aria-hidden="true"
      checked=""
      id="airplane-mode-checked"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="airplane-mode-checked"
      id="airplane-mode-checked-label"
    >
      Airplane mode
    </label>
  </div>
</div>
`;

exports[`Switch snapshots > matches snapshot: Default 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <span
      aria-checked="false"
      aria-labelledby="airplane-mode-label"
      class="inline-flex h-5 w-9 shrink-0 items-center rounded-full border border-transparent bg-input outline-none transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[checked]:bg-primary"
      data-unchecked=""
      id="base-ui-_r_0_"
      role="switch"
      tabindex="0"
    >
      <span
        class="block size-4 translate-x-0.5 rounded-full bg-background shadow-sm transition-transform data-[checked]:translate-x-4"
        data-unchecked=""
      />
    </span>
    <input
      aria-hidden="true"
      id="airplane-mode"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="airplane-mode"
      id="airplane-mode-label"
    >
      Airplane mode
    </label>
  </div>
</div>
`;

exports[`Switch snapshots > matches snapshot: Disabled 1`] = `
<div>
  <div
    class="flex items-center gap-2"
  >
    <span
      aria-checked="false"
      aria-disabled="true"
      aria-labelledby="airplane-mode-disabled-label"
      class="inline-flex h-5 w-9 shrink-0 items-center rounded-full border border-transparent bg-input outline-none transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[checked]:bg-primary"
      data-disabled=""
      data-unchecked=""
      id="base-ui-_r_6_"
      role="switch"
      tabindex="-1"
    >
      <span
        class="block size-4 translate-x-0.5 rounded-full bg-background shadow-sm transition-transform data-[checked]:translate-x-4"
        data-disabled=""
        data-unchecked=""
      />
    </span>
    <input
      aria-hidden="true"
      disabled=""
      id="airplane-mode-disabled"
      style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
      type="checkbox"
    />
    <label
      class="text-sm leading-none font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="airplane-mode-disabled"
      id="airplane-mode-disabled-label"
    >
      Airplane mode
    </label>
  </div>
</div>
`;
